--- a/.abf.yml
+++ b/.abf.yml
@@ -1,4 +1,5 @@
 removed_sources:
   Devel-Declare-0.006005.tar.gz: 86eb890e1b7fd26f589f01aa3a853a8393a029f0
-sources:
   Devel-Declare-0.006014.tar.gz: 920bbed4db631fa3e91f621795942fe2efc95fbc
+sources:
+  Devel-Declare-0.006015.tar.gz: d28ac845b1ce75ccebb59218c41618e230ed4822
