Updated to 0.006016 (by updates_builder)

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,5 +1,6 @@
 removed_sources:
   Devel-Declare-0.006005.tar.gz: 86eb890e1b7fd26f589f01aa3a853a8393a029f0
   Devel-Declare-0.006014.tar.gz: 920bbed4db631fa3e91f621795942fe2efc95fbc
-sources:
   Devel-Declare-0.006015.tar.gz: d28ac845b1ce75ccebb59218c41618e230ed4822
+sources:
+  Devel-Declare-0.006016.tar.gz: 4089118bfa59ef6dec8e2961e25f63dfbaafa4f8
